<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vishnunair.ftutoria.Messaging"
    tools:showIn="@layout/activity_messaging"
      android:orientation="vertical"
    android:weightSum="1">



    <TextView
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_messaging"
        android:id="@+id/textView6"
        android:layout_weight="0.09" />
    <TextView
        android:layout_width="350dp"
        android:layout_height="248dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty"
        android:id="@+id/messageHistoryBox"
        android:layout_weight="0.56" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="297dp"
        android:layout_height="91dp"
        android:weightSum="1">

        <EditText
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/empty"
            android:id="@+id/sendMessage"
            android:layout_weight="0.96"
            android:inputType="text" />

        <Button
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:text="@string/Send"
            android:id="@+id/send" />
    </LinearLayout>
</LinearLayout>
